--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,17 @@
- @import "tailwindcss";
+@import "tailwindcss";
+
+@font-face {
+  font-family: "hosain";
+  src: url(./assets/fonts/bootstrap-icons.woff2);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  color: #fff;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
