--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@
 
 body {
   margin: 0;
+  overflow-x: hidden;
   padding: 0;
   color: #fff;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
